tests/testdata/dynamic_import/permissions_data_remote.ts.out
error: Uncaught (in promise) TypeError: Requires import access to "example.com:443", run again with the --allow-import flag
    at data:application/javascript;base64,aW1wb3J0ICJodHRwczovL2V4YW1wbGUuY29tL3NvbWUvZmlsZS50cyI7:1:8
await import(`data:application/javascript;base64,${btoa(code)}`);
^
    at async file:///[WILDCARD]/dynamic_import/permissions_data_remote.ts:3:1
